--- a/Problems.ipynb
+++ b/Problems.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Euler problems"
+    "# Project Euler problems\n",
+    "\n",
+    "https://projecteuler.net/archives"
    ]
   },
   {
@@ -66,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9227464"
+       "4613732"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,10 +92,146 @@
     "    x = num_lst[-2] + num_lst[-1]\n",
     "    num_lst.append(x)\n",
     "num_lst = num_lst[0:-1]\n",
-    "for x in range(0, len(num_lst)):\n",
+    "\n",
+    "for x in num_lst:\n",
     "    if x % 2 == 0:\n",
-    "        num2 = num2.append(x)\n",
-    "sum(num_lst)"
+    "        num2.append(x)\n",
+    "sum(num2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Largest prime factor\n",
+    "The prime factors of 13195 are 5, 7, 13 and 29.\n",
+    "\n",
+    "What is the largest prime factor of the number 600851475143 ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1397329\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "600851475143"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6857\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "factors = []\n",
+    "n = 600851475143\n",
+    "\n",
+    "for i in range(2, math.ceil(math.sqrt(n))):\n",
+    "    while n % i == 0:\n",
+    "        factors.append(i)\n",
+    "        n = n / i\n",
+    "\n",
+    "print(factors[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6857\n"
+     ]
+    }
+   ],
+   "source": [
+    "maximum = 600851475143  \n",
+    "result = 2\n",
+    "\n",
+    "while maximum > result:\n",
+    "    if maximum % result == 0:\n",
+    "        maximum = maximum /result\n",
+    "    else:\n",
+    "        result = result +1\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Magic 5-gon Ring\n",
+    "Consider the following \"magic\" 3-gon ring, filled with the numbers 1 to 6, and each line adding to nine.\n",
+    "\n",
+    "\n",
+    "Working clockwise, and starting from the group of three with the numerically lowest external node (4,3,2 in this example), each solution can be described uniquely. For example, the above solution can be described by the set: 4,3,2; 6,2,1; 5,1,3.\n",
+    "\n",
+    "It is possible to complete the ring with four different totals: 9, 10, 11, and 12. There are eight solutions in total.\n",
+    "\n",
+    "Total\tSolution Set\n",
+    "9\t4,2,3; 5,3,1; 6,1,2\n",
+    "9\t4,3,2; 6,2,1; 5,1,3\n",
+    "10\t2,3,5; 4,5,1; 6,1,3\n",
+    "10\t2,5,3; 6,3,1; 4,1,5\n",
+    "11\t1,4,6; 3,6,2; 5,2,4\n",
+    "11\t1,6,4; 5,4,2; 3,2,6\n",
+    "12\t1,5,6; 2,6,4; 3,4,5\n",
+    "12\t1,6,5; 3,5,4; 2,4,6\n",
+    "By concatenating each group it is possible to form 9-digit strings; the maximum string for a 3-gon ring is 432621513.\n",
+    "\n",
+    "Using the numbers 1 to 10, and depending on arrangements, it is possible to form 16- and 17-digit strings. What is the maximum 16-digit string for a \"magic\" 5-gon ring?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hacker Rank Problems"
    ]
   },
   {
