--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 \n",
+    "## 1 HackerRank\n",
     "Find the difference between the total number of CITY entries in the table and the number of distinct CITY entries in the table.\n",
     "The STATION table is described as follows:\n",
     "\n",
@@ -32,7 +32,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "SELECT COUNT(CITY) - COUNT(DISTINCT(CITY))\n",
+    "FROM STATION"
+   ]
   }
  ],
  "metadata": {
