--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -36,6 +36,28 @@
     "SELECT COUNT(CITY) - COUNT(DISTINCT(CITY))\n",
     "FROM STATION"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query the two cities in STATION with the shortest and longest CITY names, as well as their respective lengths (i.e.: number of characters in the name). If there is more than one smallest or largest city, choose the one that comes first when ordered alphabetically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT CITY, LENGTH(CITY)\n",
+    "FROM STATION\n",
+    "ORDER BY LENGTH(CITY) DESC, CITY LIMIT 1\n",
+    "\n",
+    "SELECT CITY, LENGTH(CITY)\n",
+    "FROM STATION\n",
+    "ORDER BY LENGTH(CITY) ASC, CITY LIMIT 1\n"
+   ]
   }
  ],
  "metadata": {
