--- a/SQL Practice.ipynb
+++ b/SQL Practice.ipynb
@@ -58,6 +58,24 @@
     "FROM STATION\n",
     "ORDER BY LENGTH(CITY) ASC, CITY LIMIT 1\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query the list of CITY names starting with vowels (i.e., a, e, i, o, or u) from STATION. Your result cannot contain duplicates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT DISTINCT city\n",
+    "FROM STATION \n",
+    "WHERE substr(CITY,1,1) in ('A','E','I','O','U') ;"
+   ]
   }
  ],
  "metadata": {
